--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "app-fatego",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "git": "npm run git-build && npm run git-deploy",
+    "git-build": "ng build --prod --base-href \"https://atruong18.github.io/FateGO/\"",
+    "git-deploy": "ngh --dir=dist/app-fatego"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +23,11 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "ngx-bootstrap": "^3.1.2",
+    "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
